--- a/blog/pubspec.yaml
+++ b/blog/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fpdart: ^1.1.0
+  supabase_flutter: ^2.8.0
+  flutter_bloc: ^8.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
