--- a/blog/pubspec.yaml
+++ b/blog/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   fpdart: ^1.1.0
   supabase_flutter: ^2.8.0
   flutter_bloc: ^8.1.6
+  get_it: ^8.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
