--- a/blog/pubspec.yaml
+++ b/blog/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   supabase_flutter: ^2.8.0
   flutter_bloc: ^8.1.6
   get_it: ^8.0.0
-
-
+  dotted_border: ^2.1.0
+  image_picker: ^1.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
