--- a/blog/pubspec.yaml
+++ b/blog/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get_it: ^8.0.0
   dotted_border: ^2.1.0
   image_picker: ^1.1.2
+  uuid: ^4.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
