--- a/blog/pubspec.yaml
+++ b/blog/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.19.0
   internet_connection_checker_plus: ^2.5.2
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
